# rcll_status_board

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml
img/ppm/: arrow.ppm  base_background.ppm  base_black.ppm  base_red.ppm  base_silver.ppm  cap_black.ppm  cap_grey.ppm  checkmark.ppm  gears.ppm  questionmark.ppm  red_cross.ppm  ring_blue.ppm  ring_green.ppm  ring_orange.ppm  ring_yellow.ppm
include/: constants.h  drawing.h  elements.h  llsf_communicator.h  util.h
include/draw/: Arrow.h  BoxLabel.h  Circle.h  Image.h  Label.h  Line.h  MultilineBoxLabel.h  Rectangle.h
include/elements/: FieldArea.h  GameField.h  HStatusPanel.h  HeaderPanel.h  MachineInfoExploration.h  MachineInfoProduction.h  MachineLabelExploration.h  MachineLabelProduction.h  MachineMarker.h  ProductInfo.h  ProductLabel.h  RobotInfo.h  RobotLabel.h  RobotMarker.h  TeamAreaExploration.h  TeamAreaPostGame.h  TeamAreaPreGameSetup.h  TeamAreaProduction.h  TeamHeaderPanel.h  (+1 more)
launch/: all.launch  comm.launch  complete.launch  cyan.launch  demo.launch  dummy.launch  field.launch  field_status_board.launch  llsf_interface.launch  magenta.launch  team_status_board.launch
msg/: GameInfo.msg  MachineInit.msg  MachineStatus.msg  Machines.msg  Product.msg  Products.msg  Robot.msg
src/: complete_status_board.cpp  drawing.cpp  elements.cpp  field_status_board.cpp  llsf_communicator.cpp  llsf_interface.cpp  static_values_publisher.cpp  team_status_board.cpp  util.cpp
srv/: AddMachines.srv  AddRobot.srv  SetGameField.srv  addMachine.srv
yaml/: DemoSetup.yaml  DummySetup.yaml  Gamefield.yaml
(+94 files in other folders)
