<?xml version="1.0"?>
<package format="2">
  <name>rcll_status_board</name>
  <version>0.9.0</version>
  <description>The rcll_status_board package</description>
  <maintainer email="florian.eith@web.de">Florian Eith</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ethflo/rcll_status_board</url>
  <author email="florian.eith@web.de">Florian Eith</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rcll_vis_msgs</build_depend>
  <build_depend>protobuf_comm</build_depend>
  <build_depend>llsf_msgs</build_depend>

  <build_export_depend>opencv2</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rcll_vis_msgs</build_export_depend>
  <build_export_depend>protobuf_comm</build_export_depend>
  <build_export_depend>llsf_msgs</build_export_depend>

  <exec_depend>opencv2</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rcll_vis_msgs</exec_depend>
  <exec_depend>protobuf_comm</exec_depend>
  <exec_depend>llsf_msgs</exec_depend>
</package>
